--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html >
 <head>
-  <title>Breakout</title>
+  <title>Atari Breakout - By Nabil</title>
   <meta charset="UTF-8">
+  <meta name="theme-color" content="#36393F">
+        <meta property="og:image:url" content="https://i.ibb.co/crzLKF5/Untitled-1.png">
+        <meta property="og:image:secure_url" content="https://i.ibb.co/crzLKF5/Untitled-1.png">
+        <meta name="description" content="Play Atari Breakout online for free, unblocked!">
+        <link rel="icon" type="image/jpeg" sizes="180x180" href="https://i.ibb.co/crzLKF5/Untitled-1.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
